# blue-sky-stock-market-watch

./: .gitignore  README.md  main.py  market_agent.py  market_recap.py  market_up_down.py  market_update.py  market_update_2.py  market_update_3.py  pyproject.toml  update.sh  update_hist.txt
config/prompts/: Market-Morning-Update-Prompt-20260707.md  Market-Recap-Prompt-20260623.md  Market-Update-Prompt-20260630.md  Market-Update-Prompt-2026070211.md  Market-Update-Prompt.md
config/tickers/: tickers-nasdaq100+sndk.txt  tickers-nasdaq100.txt  tickers-snp500.txt  tickers-sox-phlx-30.txt  tickers.txt
