[project]
name = "blue-sky-stock-market-watch"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "deep-translator>=1.11.4",
    "google-genai>=2.9.0",
    "python-dotenv>=1.2.2",
    "reportlab>=5.0.0",
    "yfinance>=1.4.1",
]
